<resources>

    <string name="app_name">Infrastructure</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="menu_item_0">Login</string>
    <string name="menu_item_1">Settings</string>
    <string name="menu_item_2">Quit</string>

    <string name="actionbar_item_0">Share</string>
    <string name="actionbar_item_1">Save</string>
    <string name="actionbar_item_2">Load</string>
    <string name="actionbar_item_3">More</string>

    <color name="Black">#0000</color>
    <color name="White">#FFFF</color>

</resources>